compiler-plugin/testData/diagnostics/internalMetroStation.kt
@MetroStation(appDependencies = FooActivity.ServiceProvider::class)
internal class <!TARGET_MUST_BE_PUBLIC!>FooActivity<!> : CommonActivity<Unit>() {
    interface ServiceProvider
}
